updating the payment structure